--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @font-face {
   font-family: SeatBcn-Black;
   src: url("./assets/SeatFonts/SeatBcn-Black.woff") format("woff");
@@ -14,7 +13,6 @@
 * {
   font-family: 'SeatBcn-Black', sans-serif;
 }
-
 img{
   user-drag: none;
   user-select: none;
@@ -23,9 +21,12 @@ img{
   -webkit-user-select: none;
   -ms-user-select: none;
 }
-
 body::-webkit-scrollbar {
   display: none;
   -ms-overflow-style: none;
 
 }
+.modal-backdrop{
+  z-index:-5!important;
+}
+
